# MultiRoboRTS

./: .gitignore  README.md
robot0/src/roborts_bringup/launch/: multiroborts_stage.launch  roborts_stage.launch
robot0/src/roborts_bringup/rviz/: multirobo.rviz
robot0/src/roborts_bringup/worlds/: icra2020_multi.world
robot0/src/roborts_costmap/config/: costmap_parameter_config_for_decision.prototxt  costmap_parameter_config_for_local_plan.prototxt  obstacle_layer_config.prototxt
robot0/src/roborts_costmap/include/costmap/: costmap_interface.h
robot0/src/roborts_costmap/src/: bonus_layer.cpp  costmap_interface.cpp  test_costmap.cpp
robot0/src/roborts_decision/: behavior_tree_test.cpp  teleop_test.cpp
robot0/src/roborts_decision/behavior_tree/: behavior_node.h
robot0/src/roborts_decision/blackboard/: blackboard.h
robot0/src/roborts_decision/example_behavior/: chase_behavior.h  teleop_behavior.h
robot0/src/roborts_localization/: localization_node.cpp
robot0/src/roborts_localization/config/: localization.yaml
robot0/src/roborts_planning/global_planner/: CMakeLists.txt  global_planner_node.cpp
robot0/src/roborts_planning/global_planner/jps_planner/: CMakeLists.txt  jps_planner.h
robot0/src/roborts_planning/local_planner/src/: local_planner_node.cpp
robot1/src/roborts_bringup/launch/: multiroborts_stage.launch
robot1/src/roborts_bringup/worlds/: icra2020_multi.world
robot1/src/roborts_costmap/config/: costmap_parameter_config_for_decision.prototxt  costmap_parameter_config_for_local_plan.prototxt  obstacle_layer_config.prototxt
robot1/src/roborts_costmap/include/costmap/: bonus_layer.h
robot1/src/roborts_costmap/src/: bonus_layer.cpp  costmap_2d.cpp  costmap_interface.cpp  layered_costmap.cpp
robot1/src/roborts_decision/: CMakeLists.txt  fake_info_node.cpp
robot1/src/roborts_decision/blackboard/: blackboard.h
robot1/src/roborts_localization/: localization_node.cpp
robot1/src/roborts_localization/config/: localization.yaml
robot1/src/roborts_planning/global_planner/: global_planner_algorithms.h
robot1/src/roborts_planning/global_planner/config/: global_planner_config.prototxt
robot1/src/roborts_planning/global_planner/jps_planner/: jps_planner.cpp
robot1/src/roborts_planning/local_planner/src/: local_planner_node.cpp
